--- a/styles.less
+++ b/styles.less
@@ -1,3 +1,5 @@
+@import url("./keyframe.less");
+
 * {
   padding: 0;
   margin: 0;
@@ -21,10 +23,12 @@ iframe {
   align-items: center;
   flex-direction: column;
   gap: 100px;
+  overflow: hidden;
 
   h1 {
     color: white;
     font-size: 50px;
+    text-shadow: 3px 3px 10px #fff;
   }
 }
 
@@ -43,7 +47,7 @@ iframe {
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     border-radius: 50%;
-    box-shadow:  0 0 15px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
   }
 
   &-body {
@@ -65,9 +69,9 @@ iframe {
       bottom: 0;
       left: 50%;
       -webkit-transform: translateX(-50%);
-              transform: translateX(-50%);
+      transform: translateX(-50%);
       width: 50px;
-      background: linear-gradient(#ffffff,#ffefa0)
+      background: linear-gradient(#ffffff, #ffefa0)
     }
   }
 
@@ -117,12 +121,13 @@ iframe {
     &::before {
       left: 50%;
       -webkit-transform: translateX(-100%) skew(10deg, 10deg);
-              transform: translateX(-100%) skew(10deg, 10deg);
+      transform: translateX(-100%) skew(10deg, 10deg);
     }
+
     &::after {
       left: 50%;
       -webkit-transform: translateX(0%) rotate(90deg) skew(10deg, 10deg);
-              transform: translateX(0%) rotate(90deg) skew(10deg, 10deg);
+      transform: translateX(0%) rotate(90deg) skew(10deg, 10deg);
     }
   }
 }
@@ -146,25 +151,27 @@ iframe {
     animation: snowfall linear infinite;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
   }
-  
-  @keyframes snowfall {
-    0% {
-      transform: translateY(0) rotate(0deg);
-    }
-    100% {
-      transform: translateY(100vh) rotate(360deg);
-    }
-  }
 }
 
 .shake-animation {
-  animation: tilt-shaking 0.5s ease-in-out;
+  animation: horizontal-shaking 0.5s infinite;
 }
 
-@keyframes tilt-shaking {
-  0% { transform: rotate(0deg); }
-  25% { transform: rotate(5deg); }
-  50% { transform: rotate(0eg); }
-  75% { transform: rotate(-5deg); }
-  100% { transform: rotate(0deg); }
+.open-animation {
+  animation: box-falldown 2s forwards ease-in-out;
+  animation-delay: 1.1s;
+
+  .box-lid {
+    animation: box-lid 1s forwards ease-in-out;
+  }
+
+  .box-bowtie {
+    &::before {
+      animation: box-bowtie-left 1.1s forwards ease-in-out;
+    }
+
+    &::after {
+      animation: box-bowtie-right 1.1s forwards ease-in-out;
+    }
+  }
 }
